Use 'var' in unit tests where type is clear (#159)
* Use 'var' in unit tests where it makes sense
* Remove 'final' modifier from local variables; it doesn't really add value
  but does clutter up the code (in terms of readability, subjectively
  speaking of course)
* Inline the ObjectMapper local variable in DebugConfigTest and use
  ObjectMapper#readValue so the returned type is correct (not Object)
* Reformatting in KeyValueClient factory
* Other misc reformatting for clarity
* Fix CodeQL warning "Random used only once": Use ThreadLocalRandom
  in SecondsSerDeTest

Part of #14